[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["ssampaio <sergio.a.sampaio+rs@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/lrnrs/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 'z'